check if ImageMagick command line is exit normally when process is done, not just fater to startup it.

BUG: 151578

svn path=/branches/extragear/kde3/libs/kipi-plugins/; revision=757195